# Epitech_R-Type

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  docRFC.txt
client/assets/textsEdt/: Basic.txt  Boss.txt  Hard.txt  Medium.txt  Victory.txt
client/include/: Core.hpp  Layer.hpp  NetworkAccess.hpp  SocketParser.hpp
client/include/components/: CreateLobbyComponent.hpp  LobbyComponent.hpp  PlayerAndStarshipComponent.hpp
client/include/entities/: Button.hpp  CreateLobbyEntity.hpp  LobbyCard.hpp  LobbyWaitingEntity.hpp  PlayerAndStarshipEntity.hpp
client/include/scenes/: CreateLobby.hpp  GroupId.hpp  Groups.hpp  HowToPlay.hpp  InGame.hpp  Lobby.hpp  LobbyList.hpp  LobbyWaiting.hpp  MainMenu.hpp  SceneEnum.hpp  SceneType.hpp  Settings.hpp
client/include/sfml/: EventsSFML.hpp  FontSFML.hpp  GraphicalSFML.hpp  MusicSFML.hpp  SoundBufferSFML.hpp  SoundSFML.hpp  SpriteSfml.hpp  TextSFML.hpp  TextureSFML.hpp  WindowSFML.hpp
client/include/systems/: ClientNetworkSystem.hpp  LobbyCreateSystem.hpp  LobbySystem.hpp  LobbyWaitingSystem.hpp  PlayerAndStarshipSystem.hpp  QuitSystemInGame.hpp
client/src/: Core.cpp  SocketParser.cpp  main.cpp
client/src/scenes/: CreateLobby.cpp  HowToPlay.cpp  InGame.cpp  Lobby.cpp  LobbyList.cpp  LobbyWaiting.cpp  MainMenu.cpp  Settings.cpp
client/src/sfml/: EventsSFML.cpp  FontSFML.cpp  GraphicalSFML.cpp  MusicSFML.cpp  SoundBufferSFML.cpp  SoundSFML.cpp  SpriteSfml.cpp  TextSFML.cpp  TextureSFML.cpp  WindowSFML.cpp
client/src/systems/: ClientNetworkSystem.cpp  LobbyCreateSystem.cpp  LobbySystem.cpp  LobbyWaitingSystem.cpp  PlayerAndStarshipSystem.cpp  QuitSystemInGame.cpp
doc/: Doxyfile
dynamic_libs/: BWRobot.cpp  BWRobot.hpp  Boss.cpp  Boss.hpp  Enemy.cpp  Enemy.hpp  FlappingRobot.cpp  FlappingRobot.hpp  FloatingRobot.cpp  FloatingRobot.hpp
engine/include/: AScene.hpp  AServer.hpp  ASprite.hpp  AUdpSocket.hpp  SceneManager.hpp  Timer.hpp
engine/include/Graphical/: AGraphical.hpp  ASound.hpp  ASprite.hpp  AWindow.hpp  SpriteSfml.cpp  SpriteSfml.hpp
engine/include/SFML/: WindowSFML.hpp
engine/include/components/: AnimationComponent.hpp  AudioComponent.hpp  ButtonComponent.hpp  ChildrenComponent.hpp  ClickableComponent.hpp  ColliderComponent.hpp  ControllerComponent.hpp  MusicComponent.hpp  NetworkComponent.hpp  ParallaxComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TargetComponent.hpp  TextComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
engine/include/ecs/: Component.hpp  Entity.hpp  System.hpp
engine/include/entities/: Button.hpp  Drawable.hpp  Music.hpp  ParallaxSlide.hpp  Text.hpp
engine/include/enumerations/: ButtonState.hpp  Input.hpp  Inputs.hpp  Key.hpp  QueryType.hpp
engine/include/graphical/: AEvents.hpp  AFont.hpp  AGraphical.hpp  AMusic.hpp  ASound.hpp  ASoundBuffer.hpp  ASprite.hpp  AText.hpp  ATexture.hpp  AWindow.hpp  IAudio.hpp
engine/include/networking/: AServer.hpp  ATcpSocket.hpp  AUdpSocketIO.hpp
engine/include/sceneManagement/: AEntityGroup.hpp  AScene.hpp  SceneManager.hpp  SceneRequest.hpp
engine/include/systems/: AnimationSystem.hpp  ButtonSystem.hpp  ChildrenSystem.hpp  DrawSystem.hpp  InputSystem.hpp  MouseSystem.cpp  MouseSystem.hpp  MoveSystem.hpp  MusicSystem.hpp  ParallaxSystem.hpp  PhysicSystem.hpp  SoundSystem.hpp  TargetSystem.hpp  TextSystem.hpp  WindowResizeSystem.hpp
engine/include/tools/: ADLLoader.hpp  ATime.hpp  AssetPool.cpp  AssetPool.hpp  Color.hpp  DLLoader.hpp  DynamicLibManager.hpp  EngineExceptions.hpp  Geometry.hpp  RandomETU.hpp  Time.hpp  TimeUnits.hpp  Timer.hpp  Utils.hpp
engine/src/: AScene.cpp  AServer.cpp  ASprite.cpp  AWindow.cpp  SceneManager.cpp  Timer.cpp
engine/src/Graphical/: AEvents.cpp  AGraphical.cpp  ASound.cpp  ASprite.cpp  AWindow.cpp  SpriteSfml.cpp
engine/src/SFML/: WindowSFML.cpp
engine/src/components/: SpriteComponent.cpp  TransformComponent.cpp
engine/src/ecs/: Entity.cpp  System.cpp
engine/src/graphical/: AEvents.cpp  AFont.cpp  AGraphical.cpp  AMusic.cpp  ASound.cpp  ASoundBuffer.cpp  ASprite.cpp  AText.cpp  ATexture.cpp  AWindow.cpp  Audio.hpp
engine/src/networking/: AServer.cpp  ATcpSocket.cpp  AUdpSocketIO.cpp
engine/src/sceneManagement/: AEntityGroup.cpp  AScene.cpp  SceneManager.cpp
engine/src/systems/: AnimationSystem.cpp  ButtonSystem.cpp  ChildrenSystem.cpp  DrawSystem.cpp  InputSystem.cpp  MouseSystem.cpp  MoveSystem.cpp  MusicSystem.cpp  ParallaxSystem.cpp  PhysicSystem.cpp  SoundSystem.cpp  TargetSystem.cpp  TextSystem.cpp  WindowResizeSystem.cpp
engine/src/tools/: AssetPool.cpp  Timer.cpp
server/: main.cpp
server/Client/: Client.cpp  Client.hpp
server/Core/: Core.cpp  Core.hpp
server/Lobby/Lobby/: Lobby.cpp
server/Lobby/LobbyManager/: LobbyManager.cpp
server/client/: Client.cpp  Client.hpp  SocketParser.cpp  SocketParser.hpp
server/client/TCP/: TcpSocket.cpp  TcpSocket.hpp
server/client/UDP/: UdpSocketIO.cpp  UdpSocketIO.hpp  UdpSocketInput.cpp  UdpSocketInput.hpp
server/core/: Core.cpp  Core.hpp  CoreServer.cpp  CoreServer.hpp
server/game/: ADLLoader.hpp  CollisionMasks.hpp  DLLoader.hpp  DynamicLibManager.hpp  Game.cpp  Game.hpp  GameData.hpp  IEnemy.hpp
server/game/components/: AutomaticWeaponComponent.hpp  CollectibleComponent.hpp  EnemySpawnerComponent.hpp  HealthComponent.hpp  LifetimeComponent.hpp  ManualWeaponComponent.hpp  PatternComponent.hpp  ProjectileComponent.hpp  SpawnerComponent.hpp  WaveComponent.hpp  WeaponComponent.hpp
server/game/dataHolders/: DataFont.cpp  DataFont.hpp  DataMusic.cpp  DataMusic.hpp  DataSound.cpp  DataSound.hpp  DataSprite.cpp  DataSprite.hpp  DataText.cpp  DataText.hpp  DataTexture.cpp  DataTexture.hpp
server/game/entities/: Collectible.hpp  Enemy.hpp  Ground.hpp  Particle.hpp  Player.hpp  Projectile.hpp  Sentinel.hpp  Spawner.hpp
server/game/systems/: AutomaticWeaponSystem.cpp  AutomaticWeaponSystem.hpp  BorderLimitSystem.cpp  BorderLimitSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  GroundSystem.cpp  GroundSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  LifetimeSystem.cpp  LifetimeSystem.hpp  PlayerCollisionSystem.cpp  (+13 more)
(+9 files in other folders)
